# carbon-intensity-forecast

./: .env.example  .gitignore  CLAUDE.md  LESSONS.md  LICENSE  README.md  TASKS.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml
notebooks/: S01_extraction_validation.ipynb  S02_descriptive_analysis.ipynb  S03_feature_engineering.ipynb  S04_e2_results.ipynb  S05_e3_results.ipynb  S06_feature_comparison.ipynb  S07_train_window.ipynb
outputs/: README.md  all_frameworks_train2024.csv  all_frameworks_train2024_seeds.csv  e2_realsplit_testA_valsel.csv  e3_realsplit_testA_valsel.csv  final_metrics.csv  single_tier_cons.csv  single_tier_prod.csv  structural_comparison.csv  test_b_headtohead.csv  test_b_structural.csv  tier1_horizon_nrmse.csv  train_window_comparison.csv
reports/poster/: poster.html  poster_content.md
reports/proposal/: proposal.tex  references.bib
reports/report/: references.bib  report.tex
scripts/: collect_forecasts.py  extract_historical.py  feature_comparison.py  make_architecture_svg.py  make_eda_ci_evolution.py  make_eda_correlation.py  make_eda_distribution.py  make_eda_mix.py  make_eda_mix_sankey.py  make_eda_net_import.py  make_eda_temporal.py  make_final_results.py  make_framework_comparison.py  make_fva_frameworks.py  make_poster_figures.py  make_results_figures.py  make_tier1_figures.py  make_train_window_comparison.py  refresh_zone_centroids.py  score_test_b.py  train_all_frameworks.py
tests/: test_em_client.py  test_extract.py  test_metrics.py  test_plotting_config.py  test_storage.py  test_weather_client.py  test_zones.py
(+24 files in other folders)
