[project]
name = "carbon-forecast"
version = "0.1.0"
description = "Open, reproducible deep learning framework for consumption-based carbon intensity forecasting with cross-border flow modeling."
readme = "README.md"
authors = [
    { name = "Nicolas Higuera Wilches", email = "nicolaswilches@icloud.com" },
]
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scipy>=1.13",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "holidays>=0.50",
    "plotly>=5.22",
    "tensorflow>=2.16,<2.20",
    "keras>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbstripout>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbon_forecast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

